# arvinfinanceanalyse

./: .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .spectral.yaml  .spectralignore  .tmp-compiled-test_golden_samples_capture_ready.pyc.2737693683456  AGENTS.md  CLAUDE.local.md  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  governance-lineage-audit.json  prd-moss-agent-analytics-os.md  pytest.ini
audit_pack/source_snapshot/backend/: pyproject.toml
backend/: CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9c4f1e7a2b6d_add_launch_governance_lineage_columns.py  b5a7d4a9f2c1_add_kpi_tables.py
backend/app/: AGENTS.md  __init__.py  duckdb_schema_bootstrap.py  main.py  postgres_migrations.py  storage_bootstrap.py  storage_migration_flags.py
backend/app/agent/: __init__.py
backend/app/api/: __init__.py  perf_logging.py
backend/app/config/: choice_runtime.py  product_category_mapping.py
backend/app/core_finance/: __init__.py  accounting_asset_movement.py  adb_analysis.py  adb_analytics.py  adb_interbank_labels.py  adb_rate_normalize.py  alert_engine.py  attribution_core.py  attribution_daily.py  balance_analysis.py  balance_analysis_workbook.py  balance_calibration.py  bond_duration.py  bond_four_effects.py  campisi.py  campisi_decision_grade.py  cashflow_projection.py  credit_spread.py  credit_spread_analysis.py  cycle_macro_score.py  decimal_utils.py  factor_screen_candidates.py  field_normalization.py  formal_financial_indicators.py  fx_rates.py  hybrid_fusion_candidates.py  hybrid_fusion_config.py  krd.py  liability_analytics_compat.py  liability_cockpit.py  livermore_risk_exit.py  livermore_sector_rank.py  livermore_stock_candidates.py  livermore_strategy.py  livermore_theme_breakout.py  macro_bond_linkage.py  market_derived.py  mean_reversion_candidates.py  metric_registry.py  module_contracts.py  (+16 more)
backend/app/governance/: __init__.py  formal_compute_lineage.py  locks.py  research_runs.py  settings.py  temporal_guard.py
backend/app/models/: __init__.py  governance.py
backend/scripts/: audit_caliber_violations.py  backfill_cross_asset_macro_environment.py  backfill_formal_balance.py  batch_materialize_balance.py  bootstrap_data_pipeline.py  caliber_violations_summary.py  diagnose_adb_coverage.py  diagnose_balance_calibration.py  diagnose_balance_diff.py  fix_silent_exceptions.py  probe_choice_treasury_10y_history.py  reconcile_calibers.py
(+2220 files in other folders)
