[project]
name = "moss-agent-analytics-os-backend"
version = "0.1.0"
description = "Phase 1 backend skeleton for MOSS Agent Analytics OS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "duckdb>=1.2,<2",
  "redis>=6,<7",
  "dramatiq>=1.17,<2",
  "minio>=7.2,<8",
  "openpyxl>=3.1,<4",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pandas>=2.2,<3",
  "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["../tests"]
