[project]
name = "moss-agent-analytics-os-backend"
version = "0.1.0"
description = "Phase 1 backend skeleton for MOSS Agent Analytics OS"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "requests>=2.32,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "psycopg[binary]>=3.2,<4",
  "duckdb>=1.2,<2",
  "redis>=6,<7",
  "dramatiq>=1.17,<2",
  "minio>=7.2,<8",
  "openpyxl>=3.1,<4",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pandas>=2.2,<3",
  "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["../tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments (FastAPI pattern)
    "B904",  # raise from within except (too noisy for existing code)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "F841"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
